Sun, 02 Mar 2008 14:20:56 +0100 <thp@perli.net>
Make "gl" a global-accessible object in libgpodder

	* doc/dev/gdfs/gdfs-check.py: Adapt to new structure of gPodderLib
	* src/gpodder/*.py: Use "gl" instead of all incarnations of
	"gPodderLib()" or "libgpodder.gPodderLib()", and weed out all "gl =
	gPodderLib() lines, because it makes the code look unnecessarily
	bloated ;)
	* src/gpodder/libgpodder.py: Make "gl" a global instance of the
	gPodderLib() object, and rename gPodderLibClass to gPodderLib and do
	some more cleaning-up

Sun, 02 Mar 2008 14:03:40 +0100 <thp@perli.net>
Move gPodderLib().open_folder to util.gui_open

	* src/gpodder/gui.py: Use util.gui_open instead of gl.open_folder
	* src/gpodder/libgpodder.py: Remove open_folder (move to gpodder.util)
	* src/gpodder/util.py: Add gui_open function that uses xdg_open to
	open files and folders with their default application in the GUI

Sun, 02 Mar 2008 13:52:42 +0100 <thp@perli.net>
Pickle-based storage method (dumbshelve); HTTP HEAD requests; buggy feed fixes

	* src/gpodder/dumbshelve.py: Added (replacement for "shelve" using
	pickle)
	* src/gpodder/libgpodder.py: Rename *.db files to *.pickle.db, so we
	don't clash with old-style shelve .db files
	* src/gpodder/libpodcasts.py: Use dumbshelve as a replacement for
	shelve; add EpisodeURLMetainfo that keeps track of metainfo downloaded
	via HTTP HEAD requests; make getting episode length and pubDate a bit
	more intelligent by trying to find correct values via HTTP HEAD;
	improve episode sorting by falling back to episode titles when no
	pubDate has been found (or pubDate is equal); 
	* src/gpodder/util.py: Add get_episode_info_from_url() function that
	tries to find out the length and pubDate of an episode by looking at
	the data from the HTTP HEAD; also support HTTP proxys via an optional
	"proxy" keyword argument

Wed, 27 Feb 2008 10:44:48 +0100 <thp@perli.net>
Notify user about no new episodes when updating from tray icon
